--- a/Multiple Linear Reg (ch.3)/scripts/ch3_p23.ipynb
+++ b/Multiple Linear Reg (ch.3)/scripts/ch3_p23.ipynb
@@ -1,26 +1,11 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "provenance": [],
-      "authorship_tag": "ABX9TyOJsB+7Urpfs6vGae940001",
-      "include_colab_link": true
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    }
-  },
   "cells": [
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
+        "colab_type": "text",
+        "id": "view-in-github"
       },
       "source": [
         "<a href=\"https://colab.research.google.com/github/ramirezramiro/linear-reg/blob/main/ch3_p23.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
@@ -38,8 +23,8 @@
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "F-statistic:  207.00000000000006\n",
             "Critical Value:  4.279344309144648 \n",
@@ -54,10 +39,15 @@
         "import numpy as np\n",
         "from scipy.stats import f\n",
         "\n",
+        "print(\"3.23 Suppose that a linear regression model with k=2 regressors has been fit to n=25 observations and R_sq= 0.90.\")\n",
+        "\n",
         "n = 25 # number of samples\n",
         "k = 2  # number of regressors\n",
         "R_sq = 0.90 # R-squared value\n",
         "\n",
+        "\n",
+        "print(\"\\n----------------\")\n",
+        "print(\"a. Test for significance of regression at α=0.05. Use the results of the previous problem.\")\n",
         "# Calculate the F-statistic\n",
         "F = (R_sq / (k-1)) / ((1-R_sq) / (n-k))\n",
         "print(\"F-statistic: \", F)\n",
@@ -75,9 +65,30 @@
         "else:\n",
         "    print(\"The model is not significant at the alpha=0.05 level.\")\n",
         "\n",
+        "print(\"\\n----------------\")\n",
+        "print(\"b. What is the smallest value of R_sq that would lead to the conclusion of a significant regression if α=0.05? Are you surprised at how small this value of R_sq is?\")\n",
+        "\n",
         "min_R_sq = (crit_val / (n - k)) / (1 + crit_val / k)\n",
-        "print(\"\\nMinimum R-squared:\", min_R_sq)"
+        "print(\"\\nMinimum R-squared:\", min_R_sq)\n",
+        "\n",
+        "print(\"\\nIn this case the min r_sq is pretty close to the alpha value. The difference between values is an extra +\", min_R_sq-crit_val)"
       ]
     }
-  ]
+  ],
+  "metadata": {
+    "colab": {
+      "authorship_tag": "ABX9TyOJsB+7Urpfs6vGae940001",
+      "include_colab_link": true,
+      "provenance": []
+    },
+    "kernelspec": {
+      "display_name": "Python 3",
+      "name": "python3"
+    },
+    "language_info": {
+      "name": "python"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
